--- a/app/views/camera_page/index.html.erb
+++ b/app/views/camera_page/index.html.erb
@@ -3,15 +3,14 @@
 <div id="wrap">
   <div class="container">
 
-    <header class="masthead">
-      <%= image_tag("redribbon_2.png", width: "100%", alt: "Banner") %>
-    </header>
+    <header></header>
 
     <section class="row">
       <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 camera">
         <%= image_tag("woodcam.png", alt: "Camera") %>
       </div>
       <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 display">
+        <video autoplay="autoplay"></video>
         <%= image_tag("display.png", alt: "Display") %>
       </div>
       <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 backside">
