--- a/app/views/camera_page/index.html.erb
+++ b/app/views/camera_page/index.html.erb
@@ -5,6 +5,23 @@
 
     <header></header>
 
+    <div class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title">Notice</h4>
+          </div>
+          <div class="modal-body">
+            <p>This page requires a Webcam and Google Chrome in order to work properly.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <section class="row">
       <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 camera">
         <canvas width="200px" height="150px"></canvas>
