--- a/app/views/camera_page/index.html.erb
+++ b/app/views/camera_page/index.html.erb
@@ -1,4 +1,7 @@
 <% provide(:title, 'Camera App') %>
+<% content_for :head do %>
+  <meta charset="utf-8">
+<% end %>
 
 <div id="wrap">
   <div class="container">
@@ -24,8 +27,8 @@
 
     <section class="row">
       <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 camera">
-        <canvas width="200px" height="150px"></canvas>
-        <p class="photo_container"><img src="" id="photo"></p>
+        <canvas width="200" height="150"></canvas>
+        <p class="photo_container"><img src="quest.png" id="photo" alt="photo"></p>
         <%= audio_tag("cam.ogg") %>
         <%= image_tag("woodcam.png", alt: "Camera") %>
       </div>
