--- a/app/assets/stylesheets/camera_page.css.scss
+++ b/app/assets/stylesheets/camera_page.css.scss
@@ -9,7 +9,7 @@ html, body {
 
 body.camera_page.index {
 
-  background-image: url("denim.png");
+  background-image: url("textile.png");
   min-width: 640px;
 
   .modal-footer {
