--- a/app/assets/stylesheets/camera_page.css.scss
+++ b/app/assets/stylesheets/camera_page.css.scss
@@ -370,7 +370,7 @@ body.camera_page.index {
     body.camera_page.index {
 
       header {
-        background-image: url("red_ribbon_2.png");
+        background-image: url("large_ribbon.png");
       }
 
       .display {
