--- a/app/views/camera_page/index.html.erb
+++ b/app/views/camera_page/index.html.erb
@@ -24,7 +24,7 @@
 
     <section class="row">
       <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 camera">
-        <canvas width="200" height="150"></canvas>
+        <canvas></canvas>
         <p class="photo_container"><img id="photo"></p>
         <%= audio_tag("cam.ogg") %>
         <%= image_tag("woodcam.png", alt: "Camera") %>
